Fix graphics glitches on mobile

--- a/html/css/custom.css
+++ b/html/css/custom.css
@@ -1004,6 +1004,7 @@ h6 {
   border-radius: 50%;
   display: block;
   border: 1px solid #ddd;
+  margin-bottom: 1em;
 }
 
 #fh5co-services,
